Fix BTG button alignment

--- a/src/visualizer/src/index.css
+++ b/src/visualizer/src/index.css
@@ -35,3 +35,8 @@ button {
   fill: #444;
   font-size: 0.8em;
 }
+
+.BTG {
+  position: absolute;
+  left: 0;
+}
